WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180059
NavigatorBase::serviceWorker() should return a reference instead of a raw pointer
https://bugs.webkit.org/show_bug.cgi?id=180059
Summary
NavigatorBase::serviceWorker() should return a reference instead of a raw poi...
Chris Dumez
Reported
2017-11-27 15:47:45 PST
NavigatorBase::serviceWorker() should return a reference instead of a raw pointer, as it can never return null.
Attachments
Patch
(3.41 KB, patch)
2017-11-27 15:48 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-11-27 15:48:42 PST
Created
attachment 327704
[details]
Patch
Geoffrey Garen
Comment 2
2017-11-27 15:49:22 PST
Comment on
attachment 327704
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2017-11-27 16:22:17 PST
Comment on
attachment 327704
[details]
Patch Clearing flags on attachment: 327704 Committed
r225203
: <
https://trac.webkit.org/changeset/225203
>
WebKit Commit Bot
Comment 4
2017-11-27 16:22:19 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-11-27 16:23:25 PST
<
rdar://problem/35711144
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug