NavigatorBase::serviceWorker() should return a reference instead of a raw pointer https://bugs.webkit.org/show_bug.cgi?id=180059

Reviewed by Geoffrey Garen.

NavigatorBase::serviceWorker() should return a reference instead of a raw pointer
as it can never return null.

* bindings/js/JSNavigatorCustom.cpp:
(WebCore::JSNavigator::visitAdditionalChildren):
* dom/ScriptExecutionContext.cpp:
(WebCore::ScriptExecutionContext::serviceWorkerContainer):
* page/NavigatorBase.cpp:
(WebCore::NavigatorBase::serviceWorker):
* page/NavigatorBase.h:


Canonical link: https://commits.webkit.org/196064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225203 268f45cc-cd09-0410-ab3c-d52691b4dbfc